Добавляет про минимальную структуру HTML-документа

--- a/html-css.html
+++ b/html-css.html
@@ -181,6 +181,7 @@ project/
           <article class="chapter-part">
             <div class="chapter-part-col">
               <h3 id="html-basic-parts">Базовые части разметки</h3>
+              <p>Минимальная обязательная структура HTML-документы состоит из:</p>
               <ul>
                 <li>Современный тип документа <code>&lt;!DOCTYPE html&gt;</code></li>
                 <li>Корневой элемент <code>&lt;html&gt;</code> с языком документа <code>lang</code></li>
