--- a/html-css.html
+++ b/html-css.html
@@ -275,7 +275,7 @@ project/
             <div class="chapter-part-col">
               <h3 id="html-syntax-tag">Регистр тегов и атрибутов</h3>
               <p>Имена тегов, атрибуты и их значения <strong>должны</strong> быть записаны строчными.</p>
-              <p>Исключение: атрибуты для SVG-элементов, например <code>viewBox</code>, <code>preserveAspectRatio</code> и другие.</p>
+              <p>Исключение: атрибуты для SVG-элементов, например: <code>viewBox</code>, <code>preserveAspectRatio</code> и другие.</p>
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
