--- a/html-css.html
+++ b/html-css.html
@@ -726,7 +726,7 @@ project/
 
           <article class="chapter-part">
             <div class="chapter-part-col">
-              <h3 id="css-case-sensitivity">Регистр селектор и свойств</h3>
+              <h3 id="css-case-sensitivity">Регистр селекторов и свойств</h3>
               <p>Селекторы и свойства <strong>должны</strong> записываться строчными буквами.</p>
             </div>
             <div class="chapter-part-col gray-bgcolor">
