--- a/html-css.html
+++ b/html-css.html
@@ -78,7 +78,7 @@
             <li><a href="#css-import">Правило @import</a></li>
             <li><a href="#css-structure">Структура объявления</a></li>
             <li><a href="#css-class-names">Имена классов</a></li>
-            <li><a href="#css-case-sensitivity">Регистр селектор и свойств</a></li>
+            <li><a href="#css-case-sensitivity">Регистр селекторов и свойств</a></li>
             <li><a href="#css-multiselectors">Перенос селекторов</a></li>
             <li><a href="#css-combnators">Пробелы между комбинаторами</a></li>
             <li><a href="#css-color-format">Формат цветов</a></li>
