--- a/html-css.html
+++ b/html-css.html
@@ -913,7 +913,7 @@ ul >li {}
           <article class="chapter-part">
             <div class="chapter-part-col">
               <h3 id="css-units">Единицы измерения</h3>
-              <p>Единицы измерения не&nbsp;пишутся, там где в&nbsp;них нет необходимости.</p>
+              <p>Единицы измерения не&nbsp;пишутся там, где в&nbsp;них нет необходимости.</p>
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
