--- a/html-css.html
+++ b/html-css.html
@@ -703,7 +703,7 @@ project/
               <h3 id="css-class-names">Имена классов</h3>
               <ul>
                 <li>Имена классов пишутся строчными буквами.</li>
-                <li>Имена классов должны быть такими, чтобы по&nbsp;ним можно было быстро понять какому элементу страницы задан класс: избегайте сокращений, но&nbsp;не&nbsp;делайте их&nbsp;слишком длинными (более трёх слов).</li>
+                <li>Имена классов должны быть такими, чтобы по&nbsp;ним можно было быстро понять, какому элементу страницы задан класс. Избегайте сокращений, но&nbsp;не&nbsp;делайте их&nbsp;слишком длинными (более трёх слов).</li>
                 <li>Для написания классов используются английские слова и&nbsp;термины. Транслитом названия классов и&nbsp;атрибутов не&nbsp;пишутся.</li>
               </ul>
             </div>
