--- a/html-css.html
+++ b/html-css.html
@@ -104,7 +104,7 @@
 
           <article class="chapter-part">
             <div class="chapter-part-col">
-              <p>При написании кода вам сложно будет запомнить все правила кодгайда. Поэтому эту работу стоит отдать роботам.</p>
+              <p>При написании кода вам сложно будет запомнить все правила кодгайда. Эту работу стоит отдать роботам.</p>
               <ul>
                 <li>Для поддержания единообразия в коде используйте <a href="https://github.com/htmlacademy/codeguide/blob/master/.editorconfig">EditorConfig</a>.</li>
                 <li>Для HTML используйте <a href="https://github.com/htmlacademy/htmlhint-config-htmlacademy">HTMLHint</a>.</li>
