--- a/html-css.html
+++ b/html-css.html
@@ -108,7 +108,7 @@
               <ul>
                 <li>Для поддержания единообразия в коде используйте <a href="https://github.com/htmlacademy/codeguide/blob/master/.editorconfig">EditorConfig</a>.</li>
                 <li>Для HTML используйте <a href="https://github.com/htmlacademy/htmlhint-config-htmlacademy">HTMLHint</a>.</li>
-                <li>Для стилей <a href="https://github.com/htmlacademy/stylelint-config-htmlacademy">Stylelint</a></li>
+                <li>Для стилей <a href="https://github.com/htmlacademy/stylelint-config-htmlacademy">Stylelint</a>.</li>
               </ul>
             </div>
           </article>
