Обновляет лого для JS

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <ul>
           <li>
             <a href="html-css.html">
-              <img src="img/logo-html.svg" alt="Логотип HTML">
+              <img src="img/logo-html.svg" width="200" height="200" alt="Логотип HTML">
             </a>
           </li>
           <li>
