--- a/javascript.html
+++ b/javascript.html
@@ -191,7 +191,7 @@ const bar = [
           <article class="chapter-part">
             <div class="chapter-part-col chapter-part-col--full-width">
               <h3 id="strings">Строки</h3>
-              <p>В строках запрещено использовать переносы</p>
+              <p>В строках, объявленных с помощью одинарных кавычек, запрещено использовать переносы</p>
 
               <p>В строках запрещено указывать код спецсимволов в восьмеричной системе счисления</p>
               <pre class="language-js language-incorrect"><code>const foo = 'Copyright \251';</code></pre>
