--- a/javascript.html
+++ b/javascript.html
@@ -200,7 +200,7 @@ const bar = [
 
               <p>При создании объектов через литералы свойства должны объявляться в едином стиле: или без кавычек или с ними</p>
 
-              <p>В строках используются одинарные кавычки. Разрешено использовать строковые шаблоны. Предпочтение отдается строковым шаблонам</p>
+              <p>В строках используются одинарные кавычки. Разрешено использовать строковые шаблоны в случаях, когда необходима интерполяция</p>
             </div>
           </article>
 
